--- a/gradle/gradle.properties
+++ b/gradle/gradle.properties
@@ -13,8 +13,8 @@ kotlin.code.style=official
 # false by default (https://docs.gradle.org/current/userguide/build_cache.html#sec:build_cache_enable)
 org.gradle.caching=true
 
-# '-Xmx512m "-XX:MaxMetaspaceSize=256m"' by defaut (https://docs.gradle.org/current/userguide/build_environment.html#sec:configuring_jvm_memory)
-org.gradle.jvmargs=-Xmx4g
+# '-Xmx512m "-XX:MaxMetaspaceSize=256m"' by default (https://docs.gradle.org/current/userguide/build_environment.html#sec:configuring_jvm_memory)
+org.gradle.jvmargs=-Xmx1g
 
 # false by default (https://guides.gradle.org/performance/#parallel_execution)
 org.gradle.parallel=true
