--- a/gradle/gradle.properties
+++ b/gradle/gradle.properties
@@ -22,7 +22,7 @@ org.gradle.parallel=true
 # myapikey=foo
 
 #
-# The following are by default.
+# Don't bother to specify the following values because they are the default values.
 #
 
 # https://docs.gradle.org/current/userguide/gradle_daemon.html#sec:disabling_the_daemon
