--- a/gradle/gradle.properties
+++ b/gradle/gradle.properties
@@ -1,25 +1,29 @@
-# false by default (https://developer.android.com/studio/releases/gradle-plugin#incremental_ap)
+# Default is false (https://developer.android.com/studio/releases/gradle-plugin#incremental_ap)
 android.databinding.incremental=true
 
-# false by default (https://developer.android.com/jetpack/androidx)
+# Default is false (https://developer.android.com/jetpack/androidx)
 android.enableJetifier=true
 
-# false by default (https://developer.android.com/jetpack/androidx)
+# Default is false (https://developer.android.com/jetpack/androidx)
 android.useAndroidX=true
 
-# The default value is unclear (https://kotlinlang.org/docs/reference/code-style-migration-guide.html#in-gradle)
+# Default is unclear (https://kotlinlang.org/docs/reference/code-style-migration-guide.html#in-gradle)
 kotlin.code.style=official
 
-# false by default (https://docs.gradle.org/current/userguide/build_cache.html#sec:build_cache_enable)
+# Default is false (https://docs.gradle.org/current/userguide/build_cache.html#sec:build_cache_enable)
 org.gradle.caching=true
 
-# '-Xmx512m "-XX:MaxMetaspaceSize=256m"' by default (https://docs.gradle.org/current/userguide/build_environment.html#sec:configuring_jvm_memory)
+# Default is '-Xmx512m "-XX:MaxMetaspaceSize=256m"' (https://docs.gradle.org/current/userguide/build_environment.html#sec:configuring_jvm_memory)
 org.gradle.jvmargs=-Xmx2g
 
-# false by default (https://guides.gradle.org/performance/#parallel_execution)
+# Default is false (https://guides.gradle.org/performance/#parallel_execution)
 org.gradle.parallel=true
 
-# myapikey=foo
+# Default is summary (https://docs.gradle.org/current/userguide/command_line_interface.html#sec:command_line_warnings)
+org.gradle.warning.mode=all
+
+# https://docs.gradle.org/current/userguide/build_environment.html#sec:project_properties
+# MY_API_KEY=foo
 
 #
 # Don't bother to specify the following values because they are the default values.
