--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,7 +10,7 @@
     helper = osxkeychain # Set "osxkeychain" on Mac. Set "wincred" on Windows.
 [http]
     sslVerify = false
-    # The following prevents "remote: HTTP Basic: Accesss denied" when cloning a repository.
+    # Cloning a repository, "emptyAuth = true" prevents "remote: HTTP Basic: Accesss denied".
     # https://docs.gitlab.com/ee/integration/kerberos.html#http-basic-access-denied-when-cloning
     emptyAuth = true
 [pull]
@@ -32,6 +32,7 @@
 [alias]
     a = add --all
     ar = archive -o output.zip HEAD
+    b = rev-parse --abbrev-ref HEAD # shows the name of the current branch.
     ba = branch -a
     bd = branch -d
     bl = blame -L # <line-number> <file>
@@ -40,8 +41,8 @@
     caan = commit -a --amend --no-edit
     cam = commit -am
     cb = clone -b
-    cge = config --global -e # Open ~/.gitconfig
-    cgl = config --global -l # List all the variables in ~/.gitconfig
+    cge = config --global -e # opens ~/.gitconfig
+    cgl = config --global -l # lists all the variables in ~/.gitconfig
     cm = commit -m
     co = checkout
     cp = cherry-pick
@@ -51,7 +52,7 @@
     dt = difftool
     l = log --graph --decorate --oneline
     lp = log -p --
-    m = merge --no-edit # merge --no-edit --squash # Squash is not used in the current workplace.
+    m = merge --no-edit --squash
     mt = mergetool
     p = push
     pt = push --tags
