--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -3,12 +3,14 @@
     "source.fixAll": true,
     "source.organizeImports": true,
   },
+  "editor.find.autoFindInSelection": "always"
   "editor.find.globalFindClipboard": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
   "editor.minimap.enabled": false,
   "editor.renderWhitespace": "all",
+  "editor.smoothScrolling": true,
   "editor.wordWrap": "on",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
