--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -11,6 +11,7 @@
   "editor.minimap.enabled": false,
   "editor.renderWhitespace": "all",
   "editor.smoothScrolling": true,
+  "editor.tabSize": 2,
   "editor.wordWrap": "on",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
