--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,6 +7,7 @@
   "editor.find.autoFindInSelection": "always",
   "editor.find.globalFindClipboard": true,
   "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
   "editor.formatOnType": true,
   "editor.minimap.enabled": false,
   "editor.renderWhitespace": "all",
