--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -53,8 +53,7 @@
     dt = difftool
     l = log --graph --decorate --oneline
     lp = log -p --
-    m = merge --no-edit
-    ms = merge --no-edit --squash
+    m = merge --no-edit --squash
     mt = mergetool
     p = push
     pt = push --tags
