--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,14 +5,14 @@
     excludesfile = ~/.gitignore
     editor = code -w
     autocrlf = input # Set "input" on Linux/Mac. Set "true" on Windows. https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration
-    whitespace = cr-at-eol # Prevent "git diff" on Windows from showing "^M".
+    # whitespace = cr-at-eol # prevents "git diff" on Windows from showing "^M".
 [credential]
-    helper = osxkeychain # Set "osxkeychain" on Mac. Set "wincred" on Windows.
+    helper = osxkeychain # sets "osxkeychain" on Mac. Set "wincred" on Windows, instead.
 [fetch]
     recurseSubmodules = true
 [http]
     sslVerify = false
-    emptyAuth = true # Cloning a repository, "emptyAuth = true" prevents "remote: HTTP Basic: Accesss denied". https://docs.gitlab.com/ee/integration/kerberos.html#http-basic-access-denied-when-cloning
+    emptyAuth = true # prevents "remote: HTTP Basic: Accesss denied" when cloning a repository. https://docs.gitlab.com/ee/integration/kerberos.html#http-basic-access-denied-when-cloning
 [pull]
     rebase = true
 [rebase]
