--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -55,6 +55,7 @@
     lp = log -p --
     m = merge --no-edit --squash
     mt = mergetool
+    pb = !git pull --all --autostash -r && git rebase develop
     pf = push -f
     pt = push --tags
     puo = push -u origin
