--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -59,16 +59,15 @@
     pf = push -f
     pt = push --tags
     puo = push -u origin
-    r = rebase
     ra = rebase --abort
     rc = rebase --continue
+    rd = rebase develop
     rgu = remote get-url # is normally followed by origin or upstream, which is an original repository you fork from.
     ri = rebase -i
-    rs = restore --staged --worktree # restores both the index and the working tree.
     rsu = remote set-url # is normally followed by origin or upstream, which is an original repository you fork from.
     sb = show-branch
     sns = show --name-status
     sw = switch
     swc = switch -c
-    up = !git gc --auto && git clean -d -f && git restore . && git pull --all --autostash -r && git fetch -p -t
+    up = !git gc --auto && git clean -d -f && git restore --staged --worktree . && git pull --all --autostash -r && git fetch -p -t
     upfork = !git switch master && git rebase upstream/master
