--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -59,6 +59,7 @@
     mt = mergetool
     pa = pull --all --autostash -r
     pf = push -f
+    prum = pull --rebase upstream master # for a forked branch.
     pt = push --tags
     puo = push -u origin
     ra = rebase --abort
