--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -54,6 +54,7 @@
     d = diff
     deletelocal = !git branch | grep -v master | grep -v develop | xargs git branch -D
     dns = diff --name-status
+    dsd = diff --stat develop
     dt = difftool
     l = log --graph --decorate --oneline
     lp = log -p --
