--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -56,6 +56,7 @@
     dns = diff --name-status
     dsd = diff --stat develop
     dt = difftool
+    fd = fetch origin develop:develop
     l = log --graph --decorate --oneline
     lp = log -p --
     m = merge --no-edit --squash
