--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -67,7 +67,7 @@
     prum = pull --rebase upstream master # for a forked branch.
     ra = rebase --abort
     rc = rebase --continue
-    rd = rebase develop
+    rd = !git fetch origin develop:develop && git rebase develop
     rgu = remote get-url # is normally followed by origin or upstream, which is an original repository you fork from.
     ri = rebase -i
     rsu = remote set-url # is normally followed by origin or upstream, which is an original repository you fork from.
