--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -36,45 +36,46 @@
     a = add --all
     ar = archive -o output.zip HEAD
     b = branch --show-current # has been available since 2.22.
-    ba = branch -a
-    bd = branch -D
+    ba = branch --all
+    bd = branch -D # -D is a shortcut for "--delete --force".
     bl = blame -L # <line-number> <file>
-    bm = branch -m
-    ca = commit -a -m
+    bm = branch --move
+    ca = commit --all -m
     caam = commit -a --amend -m # stages all changes and replaces the previous commit using the new commit message.
     caan = commit -a --amend --no-edit # stages all changes and replaces the previous commit reusing the existing commit message.
     cam = commit --amend -m # replaces the previous commit using the new commit message.
     can = commit --amend --no-edit # replaces the previous commit reusing the existing commit message.
-    cb = clone -b
-    cge = config --global -e # opens ~/.gitconfig
-    cgl = config --global -l # lists all the variables in ~/.gitconfig
+    cb = clone --branch
+    cge = config --global --edit # opens ~/.gitconfig
+    cgl = config --global --list # lists all the variables in ~/.gitconfig
     cm = commit -m
     co = checkout
     cp = cherry-pick
-    csol = config --show-origin -l
-    dl = !git branch | grep -v master | grep -v develop | xargs git branch -D # "dl" means "delete local branches".
+    csol = config --show-origin --list
+    dl = !git branch | grep -v master | grep -v develop | xargs git branch -D # -D is a shortcut for "--delete --force". "dl" means "delete local branches".
     dno = diff --name-only
     dns = diff --name-status
     dsd = diff --stat develop
     dt = difftool
     fd = fetch origin develop:develop
     l = log --graph --decorate --oneline
-    lp = log -p --
+    lp = log --patch --
+    md = !git fetch origin develop:develop && git merge develop
     mt = mergetool
-    pf = push -f
+    pf = push --force
     pop = stash pop
     ra = rebase --abort
     rc = rebase --continue
     rd = !git fetch origin develop:develop && git rebase develop
     rgu = remote get-url # is normally followed by origin or upstream, which is an original repository you fork from.
-    ri = rebase -i
+    ri = rebase --interactive
     rsu = remote set-url # is normally followed by origin or upstream, which is an original repository you fork from.
     sc = stach clear
     sno = show --name-only
     sns = show --name-status
-    st = stash -u # -u includes untracked files.
+    st = stash --include-untracked
     sw = switch
-    swc = switch -c
+    swc = switch --create
     # git clean:
     # -d is to delete untracked directories too.
     # git restore:
