--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -87,4 +87,4 @@
     sd = stash drop
     sl = stash list
     ss = stash show
-    st = stash --include-untracked --message
+    st = stash push --include-untracked --message
