--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -61,7 +61,8 @@
     fd = fetch origin develop:develop
     l = log --graph --decorate --oneline
     lp = log --patch -- # takes <file> and shows the change history of the file.
-    md = !git fetch origin develop:develop && git merge develop
+    m = merge --no-edit --squash # Note: With --squash, --commit is not allowed, and will fail. https://git-scm.com/docs/git-merge#Documentation/git-merge.txt---no-squash
+    md = !git fetch origin develop:develop && git merge --no-edit develop
     mt = mergetool
     pf = push --force
     ra = rebase --abort
