--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -70,7 +70,8 @@
     rd = !git fetch origin develop:develop && git rebase develop
     rgu = remote get-url # is normally followed by origin or upstream, which is an original repository you fork from.
     ri = rebase --interactive
-    rs = reset HEAD~
+    rs = rebase --skip
+    rsh = reset HEAD~
     rsu = remote set-url # is normally followed by origin or upstream, which is an original repository you fork from.
     sno = show --name-only
     sns = show --name-status
