--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -69,8 +69,8 @@
     rd = !git fetch origin develop:develop && git rebase develop
     rgu = remote get-url # is normally followed by origin or upstream, which is an original repository you fork from.
     ri = rebase --interactive
-    rs = rebase --skip
-    rsh = reset HEAD~
+    rs = reset HEAD~
+    rsk = rebase --skip
     rsu = remote set-url # is normally followed by origin or upstream, which is an original repository you fork from.
     sno = show --name-only
     sns = show --name-status
