--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -49,7 +49,7 @@
     co = checkout
     cp = cherry-pick
     csol = config --show-origin --list
-    d = git diff | pbcopy
+    d = !git diff | pbcopy
     dl = !git branch | grep -v master | grep -v develop | xargs git branch -D # -D is a shortcut for "--delete --force". "dl" means "delete local branches".
     dno = diff --name-only
     dnoa = !git diff --name-only HEAD~ | awk -F/ '{print $NF}' | cut -d. -f1 | sort
