--- a/shell/.inputrc
+++ b/shell/.inputrc
@@ -1,2 +1,2 @@
-# enables case-insensitive tab completion in Bash.
+# Enables case-insensitive tab completion in Bash.
 set completion-ignore-case on
