--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -61,13 +61,12 @@
     ra = rebase --abort
     rc = rebase --continue
     rd = !git fetch origin develop:develop && git rebase develop
-    rgu = remote get-url # is normally followed by origin or upstream, which is an original repository you fork from.
+    rgu = remote get-url origin
     ri = rebase --interactive
     rir = rebase --interactive --root
     rs = reset HEAD~
     rsh = reset HEAD~ --hard
     rsk = rebase --skip
-    rsu = remote set-url # is normally followed by origin or upstream, which is an original repository you fork from.
     sno = show --name-only
     sns = show --name-status
     sw = switch
