--- a/eslint/.eslintrc.json
+++ b/eslint/.eslintrc.json
@@ -7,5 +7,8 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended"
-    ]
+    ],
+    "parserOptions": {
+        "sourceType": "module"
+    }
 }
